[gd_scene load_steps=12 format=2]

[ext_resource path="res://stickmin/Head.gd" type="Script" id=1]
[ext_resource path="res://stickmin/head.svg" type="Texture" id=2]
[ext_resource path="res://stickmin/Body.gd" type="Script" id=3]
[ext_resource path="res://stickmin/Gun.gd" type="Script" id=4]
[ext_resource path="res://stickmin/bullet/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://stickmin/Stickmin.gd" type="Script" id=6]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=7]
[ext_resource path="res://fonts/Inter-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="CircleShape2D" id=1]
radius = 16.1245

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.0
height = 38.0

[node name="Stickmin" type="KinematicBody2D"]
process_priority = 1
script = ExtResource( 6 )

[node name="Head" type="Sprite" parent="."]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Body" type="Line2D" parent="Head"]
points = PoolVector2Array( 939, 552, 646, 492, 478, 417, 184, 229, 762, 151, 376, 79, 619, 313, 759, 474, 298, 450 )
script = ExtResource( 3 )

[node name="Gun" type="Line2D" parent="Head/Body"]
points = PoolVector2Array( 413, 80, 359, 135, 211, 131, 168, 39, 418, 37, 469, 216, 180, 266, -86, 203, 322, -5, 210, -80 )
script = ExtResource( 4 )
bullet_scene = ExtResource( 5 )

[node name="PewTimer" type="Timer" parent="Head/Body/Gun"]
wait_time = 0.2
autostart = true

[node name="Label" type="Label" parent="Head"]
margin_left = -15.0
margin_top = -35.0
margin_right = 15.0
margin_bottom = -15.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.372549, 0.372549, 1 )
custom_fonts/font = SubResource( 2 )
text = "p1"
align = 1

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 8
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="DPS" type="Timer" parent="Hurtbox"]
wait_time = 0.5
autostart = true

[node name="BulletHurtbox" type="Area2D" parent="."]
collision_mask = 32
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHurtbox"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="DPS" type="Timer" parent="BulletHurtbox"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Head/Body/Gun/PewTimer" to="Head/Body/Gun" method="_on_PewTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="Hurtbox/DPS" to="." method="_on_DPS_timeout"]
[connection signal="area_entered" from="BulletHurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="BulletHurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="BulletHurtbox/DPS" to="." method="_on_DPS_timeout"]
